public/stylesheets/htwplus.css
/* ... */
.hp-dropdown-search .hp-search-form button {
	position: absolute;
	top: 5px;
	right: 11px;
}

.hp-navbar-container > .hp-search-form {
	padding-right: 7px;
}

.hp-navbar-container > .hp-search-form input {
	width: 150px;
	padding-right: 20px;
	background-color: #E0F2BF;
}

.hp-search-form button {
	background: transparent;
	border: 0;
	margin-left: -28px;
	outline: none;
}

.hp-search-form button .glyphicon:hover {
	color: #76B900 !important;
}

#hp-navbar li a .glyphicon {
	color: inherit !important;
}

.hp-breadcrumb {
    z-index: 999;
    position: fixed;
    top: 51px;
    width: 100%;
    height: 40px;
    line-height: 40px !important;
    border-bottom: 1px solid #eee;
    background-color: rgba(255, 255, 255, 0.9);
    white-space: nowrap;
}

.hp-breadcrumb .breadcrumb {
    margin-bottom: 0;
    background-color: inherit;
    padding: 0;
}

.hp-breadcrumb .breadcrumb a {
    height: 100%;
    display: inline-block;
}

.hp-breadcrumb .breadcrumb a:hover .glyphicon {
    color: #76b900;
}

.hp-breadcrumb .breadcrumb > li:first-child {
    margin-left: 10px;
}

.hp-breadcrumb ul.breadcrumb li:last-child {
    padding-right: 10px;
}

/*============================== Notification ==============================*/

.hp-dropdown-notifications li.notification-action:not(.disabled) a {
    color: #76b900;
}

.hp-dropdown-notifications li.notification-element span.glyphicon {
    margin-right: 10px;
}

.hp-dropdown-notifications li.notification-element a {
    width: 100%;
}

.hp-dropdown-notifications li.notification-element.read a {
    color: #bcbcbc;
}

.hp-dropdown-notifications li.notification-element.unread a {
    color: black;
}

.hp-dropdown-notifications li#hp-notification-show-history {
    width: 50%;
    float: left;
    text-align: center;
}

.hp-dropdown-notifications li#hp-notification-read-all {
    width: 50%;
    float: right;
    text-align: center;
}

.hp-dropdown-notifications li#hp-notification-nothing-new {
    text-align: center;
    padding: 7px;
}

div.hp-mailto a span.glyphicon,
div.notifications-mark-as-read a span.glyphicon,
div.well.notification a span.glyphicon {
    margin-right: 7px;
    color: #76b900;
}

div.hp-mailto a:hover span.glyphicon,
div.notifications-mark-as-read a:hover span.glyphicon,
div.well.notification a:hover span.glyphicon {
    color: rgb(90,88,88);
}

div.well.notification div.notification-date {
    font-size: smaller;
}

div.well.notification div.notification-read {
    font-size: smaller;
    font-style: italic;
}

div.well.notification div.notification-read.read {
    color: #76b900;
}

div.well.notification div.notification-read.unread {
    color: #ff5f00;
}

input.hp-notification-hour {
	display: inline;
	width: inherit;
}

.notifications-mark-as-read {
    text-align: center;
    margin: 5px;
}

.dropdown-menu li .glyphicon {
    margin: 0 7px 0 0;
}

.dropdown-menu li div a {
    text-decoration: none;
}

.dropdown-menu li div a :first-line {
    text-indent: 100px;
}

/*============================== Nav-Tabs ==============================*/

.hp-nav-tabs {
	margin-top: -40px;
}

.hp-nav-tabs > li {
	width: 50px;
}

.hp-nav-tabs > li > a {
    border-bottom-color: #dddddd !important;
    padding: 4px 2px 0 2px;
}

.hp-nav-tabs > li > a:hover,
.hp-nav-tabs > li > a:focus {
	background-color: #76b900;
}

.hp-nav-tabs li.active > a {
    border-bottom-color: transparent !important;
    box-shadow: 0 -1px 1px rgba(0, 0, 0, 0.125);
}

/*============================== Logo ==============================*/

.hp-logo {
	width: 100%;
	text-align: center;
}

.hp-logo img {
	width: 90%;
	height: auto;
	margin: 50px 0 100px;
}

#hp-navbar .hp-logo {
	height: 49px;
	padding: 5px;
    padding-right: 15px;
}

#hp-navbar .hp-logo img {
	height: 100%;
	width: auto;
	margin: 0;
}

#hp-navbar .hp-logo:hover #hover,
#hp-navbar .hp-logo #normal {
	display: inherit!important;
}

#hp-navbar .hp-logo #hover,
#hp-navbar .hp-logo:hover #normal {
	display: none!important;
}

#hp-plusi {
	width: 170px;
}

#hp-login #hp-plusi {
	position: absolute;
	right: 5px;
	bottom: 135px;
}

.hp-circle #hp-plusi {
	width: 100px;
	margin-left: -2px;
}

@media all and (max-width: 480px) {
    #hp-plusi {
		width: 130px;
    }

	#hp-login #hp-plusi {
		bottom: 140px;
	}
}

/*============================== Notepad ==============================*/

div.hp-notepad-right {
	position: relative;
    background: url(../images/vertical.png) repeat-y right 0;
    margin: 20px -10px 0;
}

@media (max-width: 767px) {
    div.hp-notepad-right  {
        margin-right: -25px;
        margin-left: -49px;
    }
}

div.hp-notepad-topRight {
	width: 48px;
	height: 15px;
	position: absolute;
	top: 0;
	right: 0;
    background: url(../images/backgrounds.png) no-repeat -50px -15px;
}

div.hp-notepad-bottomRight {
	width: 48px;
	height: 22px;
	position: absolute;
	bottom: 0;
	right: 0;
    background: url(../images/backgrounds.png) no-repeat -50px -30px;
}

div.hp-notepad-left {
	margin-right: 24px;
    background: url(../images/vertical.png) repeat-y 0 15px;
}

div.hp-notepad-topLeft {
	width: 50px;
	height: 15px;
	vertical-align: top;
	position: absolute;
	top: 0;
	left: 0;
    background: url(../images/backgrounds.png) no-repeat 0 -15px;
}

div.hp-notepad-bottomLeft {
	width: 50px;
	height: 22px;
	position: absolute;
	bottom: 0;
	left: 0;
    background: url(../images/backgrounds.png) no-repeat 0 -30px;
}

div.hp-notepad-top {
	margin-left: 50px;
	padding-top: 15px;
    background: url(../images/backgrounds.png) repeat-x 0 top;
}

div.hp-notepad-bottom {
	padding-bottom: 22px;
    background: url(../images/backgrounds.png) repeat-x 0 bottom;
}

div.hp-notepad-content {
	min-height: 500px;
	padding: 5px 30px 0;
	background-color: white;
	box-sizing: content-box;
	-moz-box-sizing: content-box;
	-webkit-box-sizing: content-box;
}

div.hp-notepad-content > *:last-child {
    margin-bottom: 0;
}
/* ... */

